REGRESSION(304346@main): [GStreamer][WebRTC] webrtc/remove-track.html  timing out https://bugs.webkit.org/show_bug.cgi?id=304182

Reviewed by Xabier Rodriguez-Calvar.

The timeout was due to input-selector waiting on buffers from upstream while the other branch had
ended already. We now send EOS to each branch and disable stream synchronization in input-selector.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.cpp:
(WebCore::RealtimeOutgoingMediaSourceGStreamer::initialize):
(WebCore::RealtimeOutgoingMediaSourceGStreamer::stopOutgoingSource):
(WebCore::RealtimeOutgoingMediaSourceGStreamer::removeOutgoingSource):

Canonical link: https://commits.webkit.org/304515@main